--- a/fiyatlandırma/index.html
+++ b/fiyatlandırma/index.html
@@ -240,6 +240,7 @@
   <canvas id="starfield-canvas" aria-hidden="true"></canvas>
   <script src="/js/starfield.js"></script>
   <script src="/js/status-badge.js"></script>
+  <script type="module" src="/js/auth.js"></script>
   <script>
     // Basit fiyatlandırma modeli (USD)
     const BASE = { start: 100, pro: 100, ent: 100 };
