--- a/model/index.html
+++ b/model/index.html
@@ -173,6 +173,7 @@
   <canvas id="starfield-canvas" aria-hidden="true"></canvas>
   <script src="/js/starfield.js"></script>
   <script src="/js/status-badge.js"></script>
+  <script type="module" src="/js/auth.js"></script>
   <script>
     // Basit: /index.html?start=chat ile sohbete deep-link
   </script>
