--- a/index.html
+++ b/index.html
@@ -684,10 +684,10 @@
       <h2 class="text-2xl md:text-3xl font-semibold text-white mb-4">Topluluk Yorumları</h2>
       <p class="text-slate-400 mb-4">Olumlu deneyim ve sorularınızı paylaşın. Küfür/olumsuz içerik yayınlanmaz. Yorum yapabilmek için giriş yapın.</p>
       <div id="comment-auth-hint" class="mb-3 text-sm text-amber-300 hidden">Yorum için giriş gerekli. <a href="profile.html" class="underline">Üyelik</a></div>
-      <div id="comment-form" class="bg-gray-900/60 border border-gray-700 rounded-2xl p-4 mb-6">
-        <textarea id="comment-text" rows="3" placeholder="Mesajınızı yazın (yalnızca olumlu, yapıcı içerikler yayınlanır)" class="w-full bg-gray-800 border border-gray-700 rounded px-3 py-2 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-indigo-500"></textarea>
+      <div id="comment-form" class="bg-gray-900/60 border border-gray-700 rounded-2xl p-4 mb-6 allow-select">
+        <textarea id="comment-text" rows="3" placeholder="Mesajınızı yazın (yalnızca olumlu, yapıcı içerikler yayınlanır)" class="allow-select w-full bg-gray-800 border border-gray-700 rounded px-3 py-2 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-indigo-500"></textarea>
         <div class="mt-3 flex items-center gap-2">
-          <button id="comment-send" class="bg-indigo-600 hover:bg-indigo-700 text-white font-semibold px-4 py-2 rounded">Gönder</button>
+          <button id="comment-send" type="button" class="bg-indigo-600 hover:bg-indigo-700 text-white font-semibold px-4 py-2 rounded">Gönder</button>
           <div id="comment-msg" class="text-sm"></div>
         </div>
       </div>
