--- a/model/index.html
+++ b/model/index.html
@@ -115,7 +115,7 @@
     <!-- Knowledge Base (RAG) -->
     <section id="kb" class="mt-16">
       <div class="max-w-7xl mx-auto px-4">
-        <h2 class="text-2xl md:text-3xl font-semibold text-white mb-6">Knowledge Base (RAG)</h2>
+        <h2 class="text-2xl md:text-3xl font-semibold text-white mb-6">Knowledge Base (RAG) !Yapım Aşamasında!</h2>
         <div class="grid md:grid-cols-3 gap-6">
           <!-- Chat with Knowledge -->
           <div class="md:col-span-2 shell rounded-2xl p-6">
