--- a/admin-support.html
+++ b/admin-support.html
@@ -471,5 +471,6 @@
     if (maintSave) maintSave.addEventListener('click', saveMaint);
     document.addEventListener('DOMContentLoaded', loadMaint);
   </script>
+  <script src="/js/copy-policy.js"></script>
 </body>
 </html>
