--- a/fiyatlandırma/index.html
+++ b/fiyatlandırma/index.html
@@ -302,5 +302,6 @@
     }
     elSend.addEventListener('click', sendQuote);
   </script>
+  <script src="/js/copy-policy.js"></script>
 </body>
 </html>
