--- a/profile.html
+++ b/profile.html
@@ -241,5 +241,6 @@
     });
   </script>
   <script src="/js/status-badge.js"></script>
+  <script src="/js/copy-policy.js"></script>
 </body>
 </html>
