--- a/contact.html
+++ b/contact.html
@@ -84,5 +84,6 @@
     });
   </script>
   <script src="/js/status-badge.js"></script>
+  <script src="/js/copy-policy.js"></script>
 </body>
 </html>
