--- a/model/index.html
+++ b/model/index.html
@@ -225,6 +225,7 @@
   <canvas id="starfield-canvas" aria-hidden="true"></canvas>
   <script src="/js/starfield.js"></script>
   <script src="/js/status-badge.js"></script>
+  <script src="/js/copy-policy.js"></script>
   <script type="module" src="/js/auth.js"></script>
   <script>
     (function(){
