--- a/game/index.html
+++ b/game/index.html
@@ -49,9 +49,9 @@
       </div>
       <div class="legend">
         <div class="font-semibold text-slate-200 mb-1">Kontroller</div>
-        <div>Yön: ← → • Zıpla: ⎵ Space • Yeniden: R</div>
-        <div>Evren Değiştir: 1=Pastel • 2=Neon • 3=Noir • Q/E: Döngü</div>
-        <div class="text-slate-400 mt-1">Amaç: 3 parçayı (shard) topla, çıkış kapısına ulaş.</div>
+        <div>Yan yana iki taşı tıkla: Yer değiştirir (sürüklemeye gerek yok).</div>
+        <div>Evren Değiştir: 1=Pastel • 2=Neon • 3=Noir • Q/E: Döngü • Yeniden: R</div>
+        <div class="text-slate-400 mt-1">Amaç: Aynı renkten en az 3'lü eşleştir, zincirler yap. 4+ eşleşmeler Shard kazandırır; 3 Shard ile kazanırsın.</div>
       </div>
       <div id="toast" class="center-toast"></div>
     </div>
@@ -62,4 +62,3 @@
   <script type="module" src="/js/game.js"></script>
 </body>
 </html>
-
