--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
     </div>
     <!-- YORUMLAR / TOPLULUK -->
     <section id="comments-section" class="mt-24 px-4 max-w-5xl mx-auto">
-      <h2 class="text-2xl md:text-3xl font-semibold text-white mb-4">Topluluk Yorumları</h2>
+      <h2 class="text-2xl md:text-3xl font-semibold text-white mb-4">Topluluk Yorumları (Yakında!)</h2>
       <p class="text-slate-400 mb-4">Olumlu deneyim ve sorularınızı paylaşın. Küfür/olumsuz içerik yayınlanmaz. Yorum yapabilmek için giriş yapın.</p>
       <div id="comment-auth-hint" class="mb-3 text-sm text-amber-300 hidden">Yorum için giriş gerekli. <a href="profile.html" class="underline">Üyelik</a></div>
       <div id="comment-form" class="bg-gray-900/60 border border-gray-700 rounded-2xl p-4 mb-6 allow-select">
