--- a/index.html
+++ b/index.html
@@ -62,11 +62,42 @@
     <link rel="stylesheet" href="css/main.css">
     <!-- İkonlar / PWA -->
   <meta name="theme-color" content="#111827">
+  <!-- SEO basics -->
+  <meta name="description" content="KΔIRA, yapay zekâ destekli birleşik bir platform: Sesli Asistan, Evrensel Sohbet, Fotoğraf Editörü, Gözlem Platformu, Code Lab ve canlı demolar. Türkçe odaklı hızlı ve modern deneyimler.">
+  <meta name="robots" content="index,follow">
+  <!-- Canonical (Güncelleyin: kendi alan adınızı yazın) -->
+  <link rel="canonical" href="https://kairaaiv2.netlify.app/">
+  <!-- Open Graph -->
+  <meta property="og:title" content="KΔIRA | Birleşik Yapay Zekâ Platformu">
+  <meta property="og:description" content="Sesli Asistan, Evrensel Sohbet, Fotoğraf Editörü, Gözlem Platformu ve daha fazlası.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://kairaaiv2.netlify.app/">
+  <meta property="og:image" content="/android-chrome-512x512.png">
+  <meta property="og:locale" content="tr_TR">
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="KΔIRA | Birleşik Yapay Zekâ Platformu">
+  <meta name="twitter:description" content="Türkçe odaklı yapay zekâ deneyimleri.">
+  <meta name="twitter:image" content="/android-chrome-512x512.png">
+  <!-- Structured Data: Organization + WebSite (Güncelleyin: name/url/logo) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "KΔIRA",
+    "url": "https://kairaaiv2.netlify.app/",
+    "logo": "https://kairaaiv2.netlify.app/android-chrome-512x512.png",
+    "sameAs": [
+      "https://github.com/umutkkgz",
+      "https://huggingface.co/umutkkgz"
+    ]
+  }
+  </script>
   <!-- Prevent aggressive browser caching during active development -->
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
-    <link rel="manifest" href="/site.webmanifest">
+  <link rel="manifest" href="/site.webmanifest">
     <link rel="icon" href="/favicon.ico" sizes="any" type="image/x-icon">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
