--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
     <link rel="stylesheet" href="css/main.css">
     <!-- İkonlar / PWA -->
   <meta name="theme-color" content="#111827">
+  <!-- Google Search Console Verification -->
+  <meta name="google-site-verification" content="QGs3Gkd6vQc1R0fG-xLDWgmr9BpSi3oPSnXQBye_CWk">
   <!-- SEO basics -->
   <meta name="description" content="KΔIRA, yapay zekâ destekli birleşik bir platform: Sesli Asistan, Evrensel Sohbet, Fotoğraf Editörü, Gözlem Platformu, Code Lab ve canlı demolar. Türkçe odaklı hızlı ve modern deneyimler.">
   <meta name="robots" content="index,follow">
