--- a/index.html
+++ b/index.html
@@ -153,6 +153,10 @@
     <!-- Intro overlay moved inside the single document body -->
     <div id="intro-container">
         <canvas id="bg-canvas"></canvas>
+        <div id="intro-aurora"></div>
+        <div id="intro-rings"></div>
+        <div id="intro-scanlines"></div>
+        <div id="intro-sparks"></div>
         <div id="bh-field"></div>
         <div id="bh-core"></div>
         <div id="ui-container">
